--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,10 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "2.17.0",
     "@types/graphql": "14.5.0",
     "@types/node": "14.14.31",
     "@types/ws": "7.4.0",
+    "prisma": "^2.17.0",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.6",
     "typescript": "4.2.2"
